# sslstrip

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  sslstrip.py
.github/workflows/: codeql-analysis.yml
sslstrip/: ClientRequest.py  SSLServerConnection.py  ServerConnection.py  StrippingProxy.py  URLMonitor.py  __init__.py
